--- a/mypro/static/html/timetable.html
+++ b/mypro/static/html/timetable.html
@@ -9,7 +9,7 @@
 </center>
 <br>
 <table align="center" width="540" cellspacing="2" cellpadding="4" border="5" bgcolor="cyan">
-<caption><b>SLOT TIME TABLE - Amrutha Rajsheker (22004501)</b></caption>
+<caption><b>SLOT TIME TABLE - BALAMURUGN B(22009515)</b></caption>
 <tr align="center">
 <th bgcolor="yellow">Day/Time</th>
 <th bgcolor="yellow">Monday</th>
